# data-aquisition-system

./: CMakeLists.txt  main.cpp
src/: main.cpp
